Updated the contact form

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:       Geometry in D3.js
-email:       your_email@example.com
+email:       linkingparents+contactme@gmail.com
 author:      Josh Findit
 description: "An exploration of geometry with mathematical and visual precision."
 baseurl:     "/Geometry-in-D3.js"
